--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
 # WBA
 **/dev-wallet.json
+
+# Binaries for programs and tests
 **/target
+
+# Executables
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Mac OS X metadata
+.DS_Store
+
+# Node.js dependencies, if applicable
+/node_modules/
+
+# Logs
+*.log
+
+# Rust specific packages
+
+**/Cargo.lock
+*.rs.bk
+
+# IDE specific files
+/.idea/
+/.vscode/
+/*.swp
