--- a/RustRegistration/Cargo.toml
+++ b/RustRegistration/Cargo.toml
@@ -8,3 +8,5 @@ solana-sdk = "1.15.2"
 bs58 = "0.4.0"
 solana-client = "1.15.2"
 solana-program = "1.15.2"
+borsh = "0.10.3"
+ solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
