.gitignore is updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # WBA
-**/dev-wallet.json
 *wallet.json
 
 # Binaries for programs and tests
@@ -12,9 +11,6 @@
 *.so
 *.dylib
 
-# Mac OS X metadata
-.DS_Store
-
 # Node.js dependencies, if applicable
 **/node_modules/
 
@@ -23,11 +19,8 @@
 *.log
 
 # Rust specific packages
-
 **/Cargo.lock
 *.rs.bk
 
-# IDE specific files
-/.idea/
-/.vscode/
-/*.swp
+
+**/package-lock.json
